<resources>
    <string name="app_name">WasteSorter</string>

    <!--    about MainActivity-->
    <string name="menu_home">메인</string>
    <string name="menu_image">사진</string>
    <string name="menu_search">검색</string>
    <string name="menu_info">정보</string>
    <string name="menu_record">기록</string>
    <string name="permission_need">카메라와 저장공간 권한이 필요합니다.</string>

    <!--    about HomeFragment-->
    <string name="home_title_1">올바른 분리배출을 위한</string>
    <string name="home_title_2">쓰레기 분류기</string>
    <string name="home_start">시작하기</string>
    <string name="home_guide_title">이용가이드</string>
    <string name="home_guide_1">사진으로 쓰레기의 종류와 배출 방법을 알고 싶다면?</string>
    <string name="home_guide_1_1">1. \'시작하기\' 버튼을 눌러주세요.</string>
    <string name="home_guide_1_2">2. 쓰레기가 잘 보이게 사진을 찍거나, 휴대폰 앨범에서 사진을 선택해주세요.</string>
    <string name="home_guide_1_3">3. 화면에 안내되는 방법대로 쓰레기를 배출해주세요.</string>
    <string name="home_guide_1_4">4. 쓰레기가 제대로 인식되지 않았다면?</string>
    <string name="home_guide_1_4_1">\'오인식 이미지 등록\'을 통해 알려주세요!</string>
    <string name="home_guide_2">사진 없이 분리배출 방법을 알고 싶다면?</string>
    <string name="home_guide_2_1">1. 하단의 \'검색\' 탭을 눌러주세요.</string>
    <string name="home_guide_2_2">2. 분리배출 품목을 검색하거나 목록에서 직접 찾을 수 있어요.</string>
    <string name="home_guide_3">분리배출 기록이 궁금하다면?</string>
    <string name="home_guide_3_1">1. 하단의 \'기록\' 탭을 눌러주세요.</string>
    <string name="home_guide_3_2">2. 현재까지의 분리배출 기록을 볼 수 있어요.</string>
    <string name="home_popup_menu_1">사진 촬영</string>
    <string name="home_popup_menu_2">갤러리</string>

    <!--    about SearchFragment-->
    <string name="search_title">분리배출 검색</string>
    <string name="search_hint">분리배출 항목 검색</string>

    <!--    about InfoFragment-->
    <string name="info_title">분리배출 정보</string>
    <string name="info_way">| 방법</string>
    <string name="info_tip">| Tip</string>
    <string name="info_plastic_name">| 플라스틱</string>
    <string name="info_plastic_1">재활용: 가능</string>
    <string name="info_plastic_2">분류: 플라스틱</string>
    <string name="info_plastic_3">분리배출 표시: 플라스틱은 재질에 따라 여러 종류로 나뉘어요.</string>
    <string name="info_plastic_4">제품마다 표시되어 있는 분리배출 기호를 확인하고, 분리배출 장소가 나누어져 있으면 재질별로, 그렇지 않으면 플라스틱으로 배출하세요.</string>
    <string name="info_plastic_way_1">1. 라벨, 상표 등이 붙어있으면 완전히 떼어내서 일반 쓰레기로 버리고 플라스틱 용기만 배출해 주세요.</string>
    <string name="info_plastic_way_2">2. 내용물을 비우고 물로 헹구는 등 이물질을 제거하여 배출합니다. 번거롭더라도 잘 지워지지 않는 기름기는 세제를 사용하여 세척합니다.</string>
    <string name="info_plastic_tip_1">1. 빨대와 같이 부피가 작거나 볼펜, 칫솔 등 다른 재질이 혼합된 플라스틱은 재활용이 불가하니 일반 쓰레기(종량제봉투)로 버려주세요.</string>
    <string name="info_plastic_tip_2">2. 투명 페트병(생수병, 콜라, 사이다, 주스 등의 음료수 병)과 유색 페트병(갈색 맥주병, 녹색 소주병, 녹색 사이다병 등)은 분리배출 방법이 달라요.</string>
    <string name="info_plastic_tip_3">3. 아무리 닦아도 지워지지 않는 자국은 하루 정도 햇볕에 두어 빨간 양념 자국이 사라지도록 합니다. 고춧가루의 \'카로티노이드\' 성분이 햇볕에 노출되면 쉽게 산화되어 얼룩이 없어지게 되기 때문입니다.</string>
    <string name="info_paper_name">| 종이</string>
    <string name="info_paper_1">재활용: 가능</string>
    <string name="info_paper_2">분류: 종이</string>
    <string name="info_paper_3">분리배출 표시: </string>
    <string name="info_paper_way_1">1. 물이나 이물질을 묻지 않게 하고 구겨지지 않게 배출해 주세요.</string>
    <string name="info_paper_way_2">2. 신문지는 함께 끈으로 묶어서 배출하면 좋아요.</string>
    <string name="info_paper_way_3">3. 고지서는 주소, 이름 등의 개인 정보가 인쇄된 부분은 잘라서 일반 쓰레기로 버리고 나머지는 종이로 배출하면 돼요.</string>
    <string name="info_paper_way_4">4. 끈끈이가 묻어있는 포스트잇은 그대로 배출해 주세요.</string>
    <string name="info_paper_way_5">5. 종이와 종이팩(종이컵, 우유갑 등) 은 다른 방식으로 재활용돼요. 반드시 종이팩이 아닌 종이로 분리배출하세요.</string>
    <string name="info_paper_tip_1">1. 영수증, 전단지, 벽지, 종이 컵라면 등 다른 재질이 합성된 종이는 재활용이 불가능해요. 일반 쓰레기(종량제봉투)로 버려주세요</string>
    <string name="info_paper_tip_2">2. 패스트푸드 테이크 아웃 포장지, 컵라면 용기 등 기름이나 음식물에 오염되어 세척이 불가능한 종이류는 일반 쓰레기(종량제봉투)로 버려요.</string>
    <string name="info_cardboard_name">| 상자</string>
    <string name="info_cardboard_1">재활용: 가능</string>
    <string name="info_cardboard_2">분류: 종이</string>
    <string name="info_cardboard_3">분리배출 표시: </string>
    <string name="info_cardboard_way_1">1. 물이나 이물질을 묻지 않게 하고 구겨지지 않게 배출해요.</string>
    <string name="info_cardboard_way_2">2. 택배 송장, 테이프, 철핀 등은 깨끗이 떼어냅니다.</string>
    <string name="info_cardboard_way_3">3. 부피가 줄어들 수 있게 접어서 배출하면 좋아요</string>
    <string name="info_cardboard_way_4">4. 종이와 종이팩 은 다른 방식으로 재활용돼요. 반드시 종이팩이 아닌 종이로 분리배출하세요.</string>
    <string name="info_cardboard_tip_1">1. 이물질에 오염되어 세척이 불가능한 종이류는 일반 쓰레기(종량제봉투)로 버려주세요.</string>
    <string name="info_cardboard_tip_2">2. 비닐 코팅되어 찢어지지 않는 과자 박스는 재활용이 불가능하니 일반 쓰레기(종량제봉투)로 버려주세요.</string>
    <string name="info_can_name">| 캔</string>
    <string name="info_can_1">재활용: 가능</string>
    <string name="info_can_2">분류: 캔류</string>
    <string name="info_can_3">분리배출 표시: </string>
    <string name="info_can_way_1">1. 내용물을 비우고, 물로 깨끗이 헹궈요.</string>
    <string name="info_can_way_2">2. 라벨, 스티커 등이 붙어있을 경우 깨끗하게 떼어낸 후 버려요.</string>
    <string name="info_can_way_3">3. 플라스틱 뚜껑 등 다른 재질은 분리해서 배출해요.</string>
    <string name="info_can_way_4">4. 발로 밟거나 최대한 압착 시켜 부피를 줄이면 더 좋아요.</string>
    <string name="info_can_way_5">5. 철 캔/참치 캔 은 보통 캔 뚜껑 부분은 알루미늄, 본체는 철로 분리배출해요.</string>
    <string name="info_can_tip_1">1. 캔류의 수거 장소가 종류에 따라 나누어져 있으면 캔류(알루미늄) 분리배출하고, 그렇지 않으면 다른 고철들과 함께 캔류로 분리배출해요.</string>
    <string name="info_glass_name">| 유리</string>
    <string name="info_glass_1">재활용: 가능 / 깨진 유리는 불가능</string>
    <string name="info_glass_2">분류: 유리 / 불연성 쓰레기</string>
    <string name="info_glass_3">분리배출 표시: </string>
    <string name="info_glass_way_1">1. 내용물과 이물질(담배꽁초 등)을 비우고, 물로 깨끗이 헹궈 낸 후 배출해요.</string>
    <string name="info_glass_way_2">2. 유리병 본체와 뚜껑은 분리해서 유리병 본체는 유리로, 유리병 뚜껑은 캔류 등 재질에 맞게 분리배출해요.</string>
    <string name="info_glass_way_3">3. 겉면의 상표 등의 라벨은 제거할 수 있으면 떼어낸 후 배출해요.</string>
    <string name="info_glass_way_4">4. 색깔 별로 유리병 배출 장소가 나누어져 있으면 색깔에 맞춰 분리배출해요.</string>
    <string name="info_glass_way_5">5. 깨진 유리병, 유리컵, 자기 그릇, 거울, 전구 등 병류가 아닌 유리제품은 유리로 분리수거가 안돼요. 불에 타지 않는 생활 쓰레기를 버리는 불연성 종량제 봉투에 담아서 버려 주세요.</string>
    <string name="info_glass_way_6">6. 기름병은 기름기를 제거해 말린 뒤 배출해 주세요. (기름을 제거하지 않는 경우 재활용이 되지 않습니다.)</string>
    <string name="info_glass_tip_1">1. 박카스, 비타 500 등의 소형 유리병은 방송 등을 통해 병뚜껑을 닫아서 배출하면 병 입구가 파손되지 않아 재사용이 가능하다고 알려졌는데, 실제론 빈 용기 보증금 대상 품목들(소주, 맥주, 탄산음료병 등)처럼 재사용하지 않고, 파쇄 후 유리 원료 또는 건축자재로 재활용한다고 합니다.</string>
    <string name="info_glass_tip_2">2. 담배꽁초 등 이물질은 반드시 제거해 주세요.</string>
    <string name="info_glass_tip_3">3. 깨진 유리나 그릇은 수거할 때 사람을 다치게 할 수 있어요. 쓰레기봉투가 찢어지지 않게 신문지 등으로 싸서 버려주세요.</string>
    <string name="info_metal_name">| 철(고철)</string>
    <string name="info_metal_1">재활용: 가능</string>
    <string name="info_metal_2">분류: 캔류</string>
    <string name="info_metal_3">분리배출 표시: </string>
    <string name="info_metal_way_1">1. 다른 재질은 최대한 분리해서 배출해요.</string>
    <string name="info_metal_way_2">2. 캔류의 수거 장소가 종류에 따라 나누어져 있으면 캔류(철)로 분리하고, 그렇지 않으면 다른 고철들과 함께 캔류로 분리배출해요.</string>
    <string name="info_metal_tip_1">1. 고철들을 끈으로 묶거나 투명 비닐에 넣어서 배출하면 더 좋아요.</string>

    <!--    about RecordFragment-->
    <string name="record_title">기록</string>
    <string name="record_type">쓰레기 분류</string>
    <string name="record_count">횟수</string>
    <string name="record_total_count">전체</string>
    <string name="record_plastic">플라스틱</string>
    <string name="record_paper">종이</string>
    <string name="record_cardboard">상자</string>
    <string name="record_can">캔</string>
    <string name="record_glass">유리</string>
    <string name="record_metal">철</string>
    <string name="record_trash">일반쓰레기</string>
    <string name="record_detail">자세히보기</string>

    <!--    about PopupSubmitActivity-->
    <string name="submit_title">오인식 이미지 등록</string>
    <string name="submit_submit">등록</string>
    <string name="submit_cancel">취소</string>

    <!--    about ImageFragment-->
    <string name="image_title">이미지 확인</string>
    <string name="image_no_image">촬영 또는 선택된 이미지가 없습니다.</string>
    <string name="image_select">분리배출할 쓰레기를 선택해주세요!</string>
    <string name="image_selected_image">선택한 이미지</string>
    <string name="image_question">▷ 선택한 쓰레기가 맞나요?</string>
    <string name="image_confirm">맞아요!</string>
    <string name="image_cancel">아니에요..</string>
</resources>