<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/home_background"
            android:tint="#55000000"
            tools:ignore="UseAppTint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/home_title_1"
                android:textColor="@color/home_light_gray"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/home_title_2"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/home_button_background_rounded"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home_start"
                android:textColor="@color/home_button_selector_color"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/home_textview_border"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:text="@string/home_guide_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_outline_lightbulb_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/guide1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:text="@string/home_guide_1"
                android:textColor="@color/app_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_1_1"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_1_2"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_1_3"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide1_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_1_4"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide1_4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="30dp"
                android:text="@string/home_guide_1_4_1"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:text="@string/home_guide_2"
                android:textColor="@color/app_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_2_1"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_2_2"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="5dp"
                android:text="@string/home_guide_3"
                android:textColor="@color/app_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide3_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_3_1"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/guide3_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="15dp"
                android:text="@string/home_guide_3_2"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>