<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.ImageFragment">

    <TextView
        android:id="@+id/imageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:text="@string/image_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/noImageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/info_linearlayout_border_top"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/image_no_image"
            android:textColor="#A8A8A8"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/yesImageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/info_linearlayout_border_top"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/image_select"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/borderImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/selectedImageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/info_linearlayout_border_top"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/image_selected_image"
                    android:textColor="@color/app_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/selectedImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/image_question"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/image_linearlayout_border_all"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <Button
                        android:id="@+id/confirmBtn"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/submit_button_border_right"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/image_confirm"
                        android:textColor="@color/confirm_blue"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/cancelBtn"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/image_cancel"
                        android:textColor="@color/confirm_red"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>