<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/submit_linearlayout_background"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".view.PopupSubmitActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/submit_linearlayout_border_bottom"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/submit_title"
        android:textColor="@color/app_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_linearlayout_border_top"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/submit_button_border_right"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/submit_submit"
            android:textColor="@color/confirm_blue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/submit_cancel"
            android:textColor="@color/confirm_red"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>